CD-81374: Прокси к апи восстановить все из неактивных
