# src/my_offers/repositories/monolith_cian_announcementapi/entities/announcement_progress_dto.py
@@ -1,0 +1,38 @@
+# pylint: skip-file
+"""
+
+Code generated by cian-codegen; DO NOT EDIT.
+
+To re-generate, run `codegen generate-client monolith-cian-announcementapi`
+
+cian-codegen version: 1.4.1
+
+"""
+from dataclasses import dataclass
+from typing import Optional
+
+from cian_enum import NoFormat, StrEnum
+
+
+class State(StrEnum):
+    __value_format__ = NoFormat
+    new = 'New'
+    """Новый запрос."""
+    in_progress = 'InProgress'
+    """Запрос обрабатывается."""
+    completed = 'Completed'
+    """Запрос обработан."""
+    error = 'Error'
+    """Произошла ошибка."""
+
+
+@dataclass
+class AnnouncementProgressDto:
+    """Результат обработки объявления."""
+
+    error_message: Optional[str] = None
+    """Сообщение об ошибке."""
+    id: Optional[int] = None
+    """ID объявления."""
+    state: Optional[State] = None
+    """Статус обработки."""
