# src/my_offers/repositories/monolith_cian_announcementapi/entities/restore_request.py
@@ -1,0 +1,20 @@
+# pylint: skip-file
+"""
+
+Code generated by cian-codegen; DO NOT EDIT.
+
+To re-generate, run `codegen generate-client monolith-cian-announcementapi`
+
+cian-codegen version: 1.4.1
+
+"""
+from dataclasses import dataclass
+from typing import List
+
+
+@dataclass
+class RestoreRequest:
+    announcement_ids: List[int]
+    """Список id объявлений для восстановления."""
+    user_id: int
+    """Realty id пользователя."""
